--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "test:ui": "vitest --ui",
     "test:coverage": "vitest --coverage",
     "test:e2e": "playwright test",
-    "test:e2e:ui": "playwright test --ui"
+    "test:e2e:ui": "playwright test --ui",
+    "test:all": "npm run test -- --run && npm run test:e2e",
+    "test:ci": "npm run test -- --run --coverage"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.4.0",
